--- a/Boxland/Boxland.csproj
+++ b/Boxland/Boxland.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Boxland.cs" />
     <Compile Include="Brush.cs" />
+    <Compile Include="Brush_Control.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Character_Control.cs" />
     <Compile Include="Fade.cs" />
@@ -57,6 +58,8 @@
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
